Added main to index.html

--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
 	<title>Practice github brancing</title>
 </head>
 <body>
-	
+
 	<h1>This is just a fun project.</h1>
+	<main>
+		<section>
+			<h2>Fun Activities</h2>
+			<ul>
+				<li>Outdoor sports</li>
+		    	<li>Indoor sports</li>
+			</ul>
+		</section>
+	</main>
 
 </body>
 </html>
