--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<h1>This is just a fun project.</h1>
 	<main>
 		<section>
-			<h2>Fun Activities</h2>
+			<h2>Fun Activities for all</h2>
 			<ul>
 				<li>Outdoor sports</li>
 		    	<li>Indoor sports</li>
